--- a/main.org
+++ b/main.org
@@ -72,18 +72,18 @@ This is one of the things people usually want to change right away. By default, 
 
 ** Theme
 #+BEGIN_SRC emacs-lisp :results output silent
-  ; (load-theme 'gruber-darker t)
+  (load-theme 'gruber-darker t)
   ; (load-theme 'dracula t)
 
-  (require 'doom-themes)
+  ; (require 'doom-themes)
 
   ;; Global settings (defaults)
-  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-        doom-themes-enable-italic t) ; if nil, italics is universally disabled
+  ; (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+  ;     doom-themes-enable-italic t) ; if nil, italics is universally disabled
 
   ;; Load the theme (doom-one, doom-molokai, etc); keep in mind that each theme
   ;; may have their own settings.
-  (load-theme 'doom-molokai t)
+  ; (load-theme 'whiteboard t)
 
   ;; Enable flashing mode-line on errors
   ; (doom-themes-visual-bell-config)
@@ -95,7 +95,7 @@ This is one of the things people usually want to change right away. By default, 
   ; (doom-themes-treemacs-config)
 
   ;; Corrects (and improves) org-mode's native fontification.
-  (doom-themes-org-config)
+  ; (doom-themes-org-config)
 #+END_SRC
 
 ** Pretty symbols
@@ -438,6 +438,8 @@ For evil bindigs
     (eval-after-load 'python 
                      '(define-key evil-normal-state-map (kbd "g d") 'elpy-goto-assignment))
     (eval-after-load 'python 
+                     '(define-key evil-normal-state-map (kbd "<SPC> d") 'elpy-doc))
+    (eval-after-load 'python 
                      '(define-key evil-normal-state-map (kbd "<SPC> m R") 'elpy-shell-switch-to-shell))
     (eval-after-load 'python 
                      '(define-key evil-normal-state-map (kbd "<SPC> m b") 'elpy-shell-send-region-or-buffer))
@@ -556,12 +558,13 @@ For evil bindigs
     (org-display-inline-images t)
     (org-redisplay-inline-images t)
     (org-startup-with-inline-images "inlineimages")
+    (org-agenda-files (list "~/org/agenda.org"))
     :config
     (org-babel-do-load-languages
      'org-babel-load-languages
      '(
        (python . t)
-       (sh . t)
+       (shell . t)
        (emacs-lisp . t)
        (plantuml . t)
        ))
@@ -678,3 +681,16 @@ For evil bindigs
     )
 #+END_SRC
 
+* Enginemode
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package engine-mode
+    :ensure t
+    :config
+    (engine-mode t)
+    (defengine github
+    "https://github.com/search?ref=simplesearch&q=%s"
+    :docstring "Search in github"
+    :keybinding "g"
+    )
+    )
+#+END_SRC
