--- a/main.org
+++ b/main.org
@@ -694,3 +694,16 @@ For evil bindigs
     )
     )
 #+END_SRC
+* All the icons
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package all-the-icons
+  :config
+  ;; org-mode ellipsis
+  (setq-default org-ellipsis (concat " " (all-the-icons-faicon "angle-down") " ")))
+
+(use-package all-the-icons-dired
+  :after (all-the-icons)
+  :init
+  (add-hook 'dired-mode-hook 'all-the-icons-dired-mode))
+
+#+END_SRC
