--- a/main.org
+++ b/main.org
@@ -83,8 +83,8 @@ This is one of the things people usually want to change right away. By default, 
 
 ** Theme
 #+BEGIN_SRC emacs-lisp :results output silent
-  (load-theme 'gruber-darker t)
-  ; (load-theme 'dracula t)
+  ; (load-theme 'gruber-darker t)
+  (load-theme 'dracula t)
 
   ; (require 'doom-themes)
 
@@ -716,4 +716,20 @@ For evil bindigs
   :after (all-the-icons)
   :init
   (add-hook 'dired-mode-hook 'all-the-icons-dired-mode))
+#+END_SRC
+* Origami
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package origami
+    :ensure t
+    :config
+    )
+#+END_SRC
+* Org-jira
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package org-jira
+    :ensure t
+    :custom
+    (jiralib-url "https://jira.cindicator.net")
+    :config
+    )
 #+END_SRC
