--- a/main.org
+++ b/main.org
@@ -434,35 +434,44 @@ For evil bindigs
     )
 #+END_SRC
 
-** Elpy
+** Anaconda
 #+BEGIN_SRC emacs-lisp :results output silent
-  (use-package elpy
-    :ensure t
-    :custom
-    (python-shell-interpreter "ipython" "Default interpreter is ipython")
-    (python-shell-interpreter-args "-i --simple-prompt" "Interpreter args")
-    (elpy-rpc-backend "jedi" "rpc backend is jedi")
+
+(use-package anaconda-mode
+  :disabled t
+  :hook ((python-mode . anaconda-mode)
+         (python-mode . anaconda-eldoc-mode))
+  :config
+  (use-package company-anaconda
+    :after company
     :config 
-    (elpy-enable)
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "<SPC> r") 'elpy-rgrep-symbol))
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "g d") 'elpy-goto-assignment))
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "<SPC> d") 'elpy-doc))
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "<SPC> m R") 'elpy-shell-switch-to-shell))
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "<SPC> m b") 'elpy-shell-send-region-or-buffer))
-    (eval-after-load 'python 
-                     '(define-key evil-visual-state-map (kbd "<SPC> m r") 'elpy-shell-send-region-or-buffer))
-    (eval-after-load 'python 
-                     '(define-key evil-normal-state-map (kbd "<SPC> m d") 'dy-python-create-docstring))
-    (eval-after-load 'python 
-                     '(define-key evil-visual-state-map (kbd "<SPC> m v d") 'dy-python-vars-to-dict))
-    (eval-after-load 'python 
-                     '(define-key evil-visual-state-map (kbd "<SPC> m v w") 'dy-python-vars-to-kwargs))
-    )
+    (add-to-list 'company-backends 'company-anaconda)
+    (company-mode)
+))
+
+
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "<SPC> r") 'elpy-rgrep-symbol))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "g d") 'elpy-goto-assignment))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "<SPC> d") 'elpy-doc))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "<SPC> m R") 'elpy-shell-switch-to-shell))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "<SPC> m b") 'elpy-shell-send-region-or-buffer))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-visual-state-map (kbd "<SPC> m r") 'elpy-shell-send-region-or-buffer))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-normal-state-map (kbd "<SPC> m d") 'dy-python-create-docstring))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-visual-state-map (kbd "<SPC> m v d") 'dy-python-vars-to-dict))
+    ;; (eval-after-load 'python 
+    ;;                  '(define-key evil-visual-state-map (kbd "<SPC> m v w") 'dy-python-vars-to-kwargs))
+ 
+
+
+
 #+END_SRC
 
 ** Virtualenv
