Use git files in projectile grep function. Change keybinding for grep

--- a/main.org
+++ b/main.org
@@ -423,7 +423,9 @@ For evil bindigs
     :config 
     (projectile-mode +1)
     (define-key evil-normal-state-map (kbd "<SPC> p") 'projectile-command-map)
+    (define-key evil-normal-state-map (kbd "<SPC> p g") 'projectile-grep)
     (setq projectile-completion-system 'ivy)
+    (setq projectile-use-git-grep t)
     )
 #+END_SRC
 
