--- a/main.org
+++ b/main.org
@@ -243,6 +243,12 @@ For evil bindigs
 #+BEGIN_SRC emacs-lisp :results output silent
   (use-package company
     :ensure t
+    :custom
+    (company-begin-commands '(self-insert-command))
+    (company-idle-delay .1)
+    (company-minimum-prefix-length 2)
+    (company-show-numbers t)
+    (company-tooltip-align-annotations 't)
     :config
     (add-hook 'after-init-hook 'global-company-mode)
     )
@@ -316,15 +322,21 @@ For evil bindigs
     (setq lsp-prefer-flymake nil)
     (setq lsp-enable-snippet nil)
     
-    (setq-default lsp-pyls-configuration-sources ["flake8"])
+    ; (setq-default lsp-pyls-configuration-sources ["flake8"])
     (setq lsp-pyls-plugins-pycodestyle-enabled nil
-          lsp-pyls-plugins-pyflakes-enabled t)
+          lsp-pyls-plugins-pyflakes-enabled nil
+          lsp-pyls-plugins-flake8-enabled t
+    )
     )
     
 
 
   (use-package lsp-ui :ensure t)
-  (use-package company-lsp :commands company-lsp)
+  (use-package company-lsp 
+     :commands company-lsp
+     :config
+     (add-to-list 'company-backends 'company-lsp)
+  )
 
 
 
@@ -581,29 +593,15 @@ For evil bindigs
     )
 #+END_SRC
 
-* Enginemode
-#+BEGIN_SRC emacs-lisp :results output silent
-  (use-package engine-mode
-    :ensure t
-    :config
-    (engine-mode t)
-    (defengine github
-    "https://github.com/search?ref=simplesearch&q=%s"
-    :docstring "Search in github"
-    :keybinding "g"
-    )
-    )
-#+END_SRC
-
 * Org-jira
-#+BEGIN_SRC emacs-lisp :results output silent
-  (use-package org-jira
-    :ensure t
-    :custom
-    (jiralib-url "https://jira.cindicator.net")
-    :config
-    )
-#+END_SRC
+; #+BEGIN_SRC emacs-lisp :results output silent
+;   (use-package org-jira
+;     :ensure t
+;     :custom
+;     (jiralib-url "https://jira.cindicator.net")
+;     :config
+;     )
+; #+END_SRC
 
 * Expand-region
 #+BEGIN_SRC emacs-lisp :results output silent
@@ -623,38 +621,45 @@ For evil bindigs
 #+END_SRC
 
 * Daemon
+Need set in .zshrc 
+
+alias em="emacsclient -c -a emacs"
 #+BEGIN_SRC emacs-lisp :results output silent
   (server-start)
 #+END_SRC
 
 * Mail
-http://www.macs.hw.ac.uk/~rs46/posts/2014-01-13-mu4e-email-client.html
-Install isync / mbsync
-
-#+BEGIN_SRC emacs-lisp :results output silent
-
-(add-to-list 'load-path "/opt/mu/mu4e")
-
-(require 'mu4e)
-
-    (setq mu4e-maildir (expand-file-name "~/email"))
-    (setq mu4e-sent-folder   "/mail/Sent Items")
-    (setq mu4e-drafts-folder "/mail/Drafts")
-    (setq mu4e-trash-folder  "/mail/Trash")
-    ; get mail
-    (setq mu4e-get-mail-command "mbsync -a"
-          mu4e-html2text-command "w3m -T text/html"
-          mu4e-update-interval 120
-          mu4e-headers-auto-update t
-          mu4e-compose-signature-auto-include nil)
-  
-    (setq mu4e-maildir-shortcuts
-          '( ("/mail/INBOX"               . ?i)
-             ("/mail/Sent Items"   . ?s)
-             ("/mail/Trash"       . ?t)
-             ("/mail/Drafts"    . ?d)))
-
-#+END_SRC
+; http://www.macs.hw.ac.uk/~rs46/posts/2014-01-13-mu4e-email-client.html
+; Install isync / mbsync
+; 
+; #+BEGIN_SRC emacs-lisp :results output silent
+; 
+; (add-to-list 'load-path "/opt/mu/mu4e")
+; 
+; (require 'mu4e)
+; 
+;     (setq mu4e-maildir (expand-file-name "~/email"))
+;     (setq mu4e-sent-folder   "/mail/Sent Items")
+;     (setq mu4e-drafts-folder "/mail/Drafts")
+;     (setq mu4e-trash-folder  "/mail/Trash")
+;     ; get mail
+;     (setq mu4e-get-mail-command "mbsync -a"
+;           mu4e-html2text-command "w3m -T text/html"
+;           mu4e-update-interval 120
+;           mu4e-headers-auto-update t
+;           mu4e-compose-signature-auto-include nil)
+;   
+;     (setq mu4e-maildir-shortcuts
+;           '( ("/mail/INBOX"               . ?i)
+;              ("/mail/Sent Items"   . ?s)
+;              ("/mail/Trash"       . ?t)
+;              ("/mail/Drafts"    . ?d)))
+; 
+; #+END_SRC
 
 
 #TODO https://github.com/emacs-evil/evil-collection
+* Aspell
+#+BEGIN_SRC emacs-lisp :results output silent
+  (setq ispell-program-name "aspell")
+#+END_SRC
