--- a/main.org
+++ b/main.org
@@ -96,6 +96,19 @@ This is one of the things people usually want to change right away. By default, 
 
 ** Theme
 #+BEGIN_SRC emacs-lisp :results output silent
+  (split-window-right)
+  (scroll-bar-mode 0)
+  (fringe-mode 0)
+
+  (set-face-attribute 'mode-line nil :box nil)
+  (set-face-attribute 'mode-line-inactive nil :box nil)
+
+  (set-face-attribute 'mode-line nil :background "#c6edf9")
+  (set-face-attribute 'mode-line-inactive nil :background "#FAFAFA")
+
+  (set-face-background 'vertical-border "gray")
+  (set-face-foreground 'vertical-border (face-background 'vertical-border))
+
   ; (load-theme 'adwaita t)
   ; (load-theme 'gruvbox-dark-hard t)
   ; (load-theme 'gruber-darker t)
